Add onto constraint forces

--- a/dyn/rkc.css
+++ b/dyn/rkc.css
@@ -10,6 +10,10 @@
     height: 210px;
 }
 
+#rkc-xlc .question {
+    height: 210px;
+}
+
 #rkc-tc {
     border-collapse: collapse;
     border-spacing: 0px;
