--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -7,13 +7,15 @@ import BlueText from "../../components/BlueText.astro"
 import RedText from "../../components/RedText.astro" 
 ---
 <Layout title="Friction">
-<Section>Friction</Section>
+<Section title="Friction">
 
 Friction is a force that resists the movement of two contacting surfaces sliding relative to each other. Frictional forces act tangential to the surface at the point of contact and act in opposition to the possible or existing motion between the surfaces. 
 
 <BlueText>Insert content from the TAM 212 page Friction and Damping - Introductory equation box</BlueText>
 
-<SubSection><RedText>Static Friction</RedText></SubSection>
+</Section>
+
+<SubSection title="<RedText>Static Friction</RedText>">
 
 Examples of coefficients of static friction: 
 
@@ -25,12 +27,13 @@ Examples of coefficients of static friction:
 In TAM 210/211, we will focus on dry friction. Dry friction occurs between two surfaces with <strong>no</strong> lubricating fluid between them. 
 
 Static friction is the friction between two bodies when there is no movement between them. 
+</SubSection>
 
-<SubSection>Tipping vs. Slipping</SubSection>
+<SubSection title="Tipping vs. Slipping">
 
 <Image src='/Statics/FrictionFigures/TipSlip.png' width=''><BlueText>Taken from TAM 210 Lecture 27</BlueText></Image>
 
 <!-- From Lecture 27 -->
-
+</SubSection>
 
 </Layout>
