--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -9,9 +9,9 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Introduction">
-<Section>Introduction to Statics</Section>
+<Section title="Introduction to Statics"></Section>
 
-<SubSection>Newton's Laws</SubSection>
+<SubSection title="Newton's Laws">
 
 <BlueText>From TAM212 Reference Pages (Kinetics of Point Masses - Newton's Equations):</BlueText>
 
@@ -20,26 +20,36 @@ Newton's equations relate the acceleration <InlineEquation equation='\\vec{a}' /
 
 They are:
 
-<SubSubSection>Newton's First Law</SubSubSection>
+</SubSection>
+
+<SubSubSection title="Newton's First Law">
 
 A particle at rest stays that way unless acted on by unbalanced forces. 
 
-<SubSubSection>Newton's Second Law</SubSubSection>
+</SubSubSection>
+
+<SubSubSection title="Newton's Second Law">
 
 <DisplayEquation equation='\\vec{F} = m \\vec{a}\\' />
 
-<SubSubSection>Newton's Third Law</SubSubSection>
+</SubSubSection>
+
+<SubSubSection title="Newton's Third Law">
 
 The mutual forces of action and reaction between two particles are equal, opposite, and collinear. 
 
-<SubSubSection>Example</SubSubSection>
+</SubSubSection>
+
+<SubSubSection title="Example">
 
 
 <Image src='/Statics/IntroductionFigures/NewtonsLaws.png' width='5'><BlueText>Taken from TAM212 Reference Pages (Kinetics of Point Masses - Newton's Equations)</BlueText></Image>
 
-<SubSection>Idealizations</SubSection>
+</SubSubSection>
 
-<SubSubSection>Particles</SubSubSection>
+<SubSection title="Idealizations"></SubSection>
+
+<SubSubSection title="Particles">
 <!-- Could change this section to "Idealizations" and write about particle idealizations, rigid body assumptions, and concentrated / distributed force assumptions.  -->
 
 In this course, we assume two things about particles: 
@@ -52,13 +62,15 @@ In this course, we assume two things about particles:
 
  Through these assumptions, we are essentially concentrating all of the mass of an object at a single point in space. The particle has a mass but the size and shape of the particle is not taken into account. 
 
-<SubSubSection>Rigid Bodies</SubSubSection>
+</SubSubSection>
+
+<SubSubSection title=">Rigid Bodies">
 
 For rigid bodies, we assume that the object has both mass (similar to particles) but also take its shape into account. 
 
 We call these bodies "rigid" because we assume that they do not deform under applied forces or moments. 
 
 <BlueText>Insert the same content here as from the TAM212 Reference Pages (Rigid Bodies - introductory section at the top of the page).</BlueText>
-
+</SubSubSection>
 
 </Layout>
