--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -6,9 +6,9 @@ import SubSection from "../../components/SubSection.astro"
 import BlueText from "../../components/BlueText.astro" 
 ---
 <Layout title="Reaction Forces">
-<Section>Reaction Forces</Section>
+<Section title="Reaction Forces"></Section>
 
-<SubSection>Types of Connections</SubSection>
+<SubSection title="Types of Connections">
 
 <Image src='/Statics/ReactionForcesFigures/ReactionForces.jpg' width='5'><BlueText>Taken from Mariana Kersh's TAM 251 Lecture notes</BlueText></Image>
 
@@ -18,9 +18,13 @@ import BlueText from "../../components/BlueText.astro"
 
 <BlueText>L13, Slide 3 had some good examples of support reactions if we want to make a pop up on the side eventually.</BlueText>
 
-<SubSection>Redundant Constraints</SubSection>
+</SubSection>
+
+<SubSection title="Redundant Constraints">
 
 If a body has more supports than it needs to hold it in equilibrium, it is overly constrained. This will result in more unknown reaction forces than equations we can write, and the problem will not be solvable using statics alone. This type of system is a "statically indeterminate" system. 
 
 %From lecture 15
+
+</SubSection>
 </Layout>
