--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -9,15 +9,15 @@ import RedText from "../../components/RedText.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Vectors Scalars">
-<Section>Vectors and Scalars</Section>
+<Section title="Vectors and Scalars"></Section>
 
 <!-- \subsection{Force Vectors} -->
 
 <!-- I'm not sure we need a reference page for this - or maybe put it at the end? -->
 
-<SubSection>Scalars vs. Vectors</SubSection>
+<SubSection title="Scalars vs. Vectors"></SubSection>
 
-<SubSubSection>Vectors</SubSubSection>
+<SubSubSection title="Vectors">
 
 <BlueText>From TAM212 Reference Pages (Vectors and Bases):</BlueText>
 
@@ -25,13 +25,17 @@ A <em>vector</em> is an arrow with a length and a direction. Just like positions
 
 <Image src='/Statics/VectorsScalarsFigures/VectorDef.png' width='4'><BlueText>Taken from TAM212 Reference Pages (Vectors and Bases)</BlueText></Image>
 
-<SubSubSection>Scalars</SubSubSection>
+</SubSubSection>
+
+<SubSubSection title="Scalars">
 
 While a vector represents magnitude and direction, a <em>scalar</em> is a number that represents a magnitude, but with no directional information. Some examples of scalar quantities can be mass, length, time, speed, or temperature. 
 
-<SubSection>Vector Operations</SubSection>
+</SubSubSection>
 
-<SubSubSection>Scaling Vectors</SubSubSection>
+<SubSection title="Vector Operations"></SubSection>
+
+<SubSubSection title="Scaling Vectors">
 
 <BlueText>Taken from TAM212 Reference Pages (Vectors and Bases)</BlueText>
 
@@ -39,7 +43,9 @@ Vectors can be multiplied by a scalar number, which multiplies their length.
 
 <Image src='/Statics/VectorsScalarsFigures/VecScaling.png' width='4'><BlueText>Taken from TAM212 Reference Pages (Vectors and Bases). Don't include the a+b vector - only keep one a and one b vector with their scaled counterparts.</BlueText></Image>
 
-<SubSubSection>Vector Addition and Subtraction</SubSubSection>
+</SubSubSection>
+
+<SubSubSection title="Vector Addition and Subtraction">
 
 <BlueText>From TAM212 Reference Pages (Vectors and Bases):</BlueText>
 
@@ -47,11 +53,15 @@ Vectors can be added or subtracted together, using the parallelogram law of addi
 
 <Image src='/Statics/VectorsScalarsFigures/VecAddition.png' width='2'><BlueText>Taken from TAM212 Reference Pages (Vectors and Bases). Only include the left part of the figure, and add another part on the right that shows a-b.</BlueText></Image>
 
-<SubSection>Unit Vectors</SubSection>
+</SubSubSection>
+
+<SubSection title="Unit Vectors">
 
 <BlueText>Use the same content here as from the TAM212 Reference Pages (Vectors and Bases - Unit Vectors)</BlueText>
 
-<SubSection>Vector Magnitude and Direction</SubSection>
+</SubSection>
+
+<SubSection title="Vector Magnitude and Direction">
 
 Vectors can be written as a magnitude (length) multiplied by the unit vector in the same direction as the original vector. 
 
@@ -68,24 +78,28 @@ Alternatively, the vector components can be determined geometrically via the ang
 <BlueText>Can probably make some sort of interactive figure here based on the image from TAM 210 lecture notes - slide 4</BlueText>
 
 <Image src='/Statics/VectorsScalarsFigures/UnitVecAngles.png' width='3'><BlueText>Taken from TAM210 Lecture Notes - Slide 4</BlueText></Image>
+</SubSection>
 
+<SubSection title="Scalar and Vector Products"></SubSection>
 
-<SubSection>Scalar and Vector Products</SubSection>
-
-<SubSubSection>Dot Product</SubSubSection>
+<SubSubSection title="Dot Product">
 
 <BlueText>Insert the same content here as from the TAM212 Reference Pages (Vectors and Bases - Dot Product).</BlueText>
 
-<SubSubSection><RedText>Cross Product</RedText></SubSubSection>
+</SubSubSection>
+
+<SubSubSection title="<RedText>Cross Product</RedText>">
 
 <RedText>Add something here about the three dimensional cross product?</RedText>
 
 <BlueText>Insert the same content here as from the TAM212 Reference Pages (Vectors and Bases - Cross Product).</BlueText>
 
-<SubSubSection>Vector Projection</SubSubSection>
+</SubSubSection>
+
+<SubSubSection title="Vector Projection">
 
 <BlueText>Insert the same content here as from the TAM212 Reference Pages (Vectors and Bases - Projection and Complementary Projection).</BlueText>
 
-
+</SubSubSection>
 
 </Layout>
