--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -8,7 +8,7 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Virtual Work">
-<Section>Virtual Work</Section>
+<Section title="Virtual Work">
 
 <!-- Lectures 34 and 35 -->
 A force does work when it produces a displacement along its line of action. 
@@ -25,16 +25,24 @@ Virtual work of a couple moment:
 
 We can use virtual work to solve for the forces in a system without needing to solve for all of the support reactions. For example, if a truss is completely pinned on one end, it doesn't move, which means there is no virtual work completed on that pin because there are no virtual displacements!
 
-<SubSection>Virtual displacements</SubSection>
+</Section>
+
+<SubSection title="Virtual displacements">
 A virtual displacement is an infinitesimally small displacement (or rotation) that is possible in the system, denoted usually as <InlineEquation equation='dx' /> or <InlineEquation equation='d\\theta' />. It's important to note that virtual displacements are assumed to be possible but don't actually exist. 
 
-<SubSection>Principle of Virtual Work</SubSection>
+</SubSection>
+
+<SubSection title="Principle of Virtual Work">
 
 If a body is in equilibrium, the sum of the virtual work done by all the forces and couple moments acting on the body is zero. 
 
 <Image src='/Statics/VWorkFigures/PVW.png' width='5 '> Principle of virtual work.  <BlueText>Taken from lecture 34.</BlueText></Image>
 
-<SubSection>Virtual work analysis</SubSection>
+</SubSection>
+
+<SubSection title="Virtual work analysis">
 
 <Image src='/Statics/VWorkFigures/VWAnalysis.png' width='5 '> Analysis procedure for virtual work problems.  <BlueText>Taken from lecture 34.</BlueText></Image>
+
+</SubSection>
 </Layout>
