--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,1 +1,14 @@
-<h1 class="fw-bold text-center"><slot /></h1>
+---
+const {title} = Astro.props;
+---
+
+<div class="content-grid">
+    <div class="w-100">
+        <h1 class="fw-bold text-center" set:html={title}></h1>
+
+        <slot />
+    </div>
+    <div class="w-100">
+        <slot name="cards"/>
+    </div>
+</div>
