--- a/src/pages/sta/cartesian_coordinates.astro
+++ b/src/pages/sta/cartesian_coordinates.astro
@@ -7,21 +7,26 @@ import BlueText from "../../components/BlueText.astro"
 import InlineEquation from "../../components/InlineEquation.astro" 
 ---
 <Layout title="Cartesian Coordinates">
-<Section>Cartesian Coordinates</Section>
+<Section title="Cartesian Coordinates">
 
 <BlueText>Insert the same content here as from the TAM212 Reference Pages (Positions and Coordinates - Cartesian Coordinates)</BlueText>
 
-<SubSection>Vector Bases</SubSection>
+</Section>
+
+<SubSection title="Vector Bases">
 
 <BlueText>Insert the same content here as from the TAM212 Reference Pages (Vectors and Bases - Vector Bases)</BlueText>
 
-<SubSection>Right Hand Rule</SubSection>
+</SubSection>
+
+<SubSection title="Right Hand Rule">
 
 The Cartesian system is a "right-handed" coordinate system, which means that we can use the right-hand rule to determine the direction of the <InlineEquation equation='x, y' /> and <InlineEquation equation='z' /> axes. In 3D the <InlineEquation equation='x, y, z' /> axes are oriented in right-handed order, so that fingers curling from <InlineEquation equation='x' /> to <InlineEquation equation='y' /> means the thumb points in the <InlineEquation equation='z' /> direction.
 
 
 <Image src='/Statics/CartCoordFigures/RightHandRule.png' width='2'><BlueText>Taken from TAM 210 Lecture 3 - Slide 3</BlueText></Image>
 
+</SubSection>
 
 
 </Layout>
