--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -6,19 +6,23 @@ import SubSection from "../../components/SubSection.astro"
 import BlueText from "../../components/BlueText.astro" 
 ---
 <Layout title="Centers of Mass">
-<Section>Center of Mass</Section>
+<Section title="Center of Mass">
 
 <BlueText>Take from the TAM 212 reference page - Centers of Mass - Introduction section</BlueText>
 
+
+</Section>
 <!-- Lectures 28, 29  -->
 
-<SubSection>Basis Shapes</SubSection>
+<SubSection title="Basis Shapes">
 
 <BlueText>Take from the TAM 212 reference page - Centers of Mass - Simplified Shapes</BlueText>
 
 Centroids of simple shapes can be combined to solve for the centroid of more complex parts. 
 
-<SubSection>Centroid</SubSection>
+</SubSection>
+
+<SubSection title="Centroid">
 
 The centroid denotes the <em>geometric</em> center of an object. When an object is made of a homogeneous material, the centroid and the center of mass are at the same point. If the object has an axis of symmetry, the centroid is on the axis of symmetry. In some cases, the centroid may not be on the object. 
 
@@ -26,5 +30,5 @@ The centroid denotes the <em>geometric</em> center of an object. When an object 
 
 <Image src='/Statics/COMFigures/CentroidAnalysis.png' width='5 '> Nonuniform load. Need to remake this in the same style as the other pictures.</Image>
 
-
+</SubSection>
 </Layout>
