Moment of inertia + fixes to images
manually created MoI page (table didnt convert over, had to make it)
fixed certain images that didnt have a width, causing it to not render

--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -31,7 +31,7 @@ Static friction is the friction between two bodies when there is no movement bet
 
 <SubSection title="Tipping vs. Slipping">
 
-<Image src='/Statics/FrictionFigures/TipSlip.png' width=''><BlueText>Taken from TAM 210 Lecture 27</BlueText></Image>
+<Image src='/Statics/FrictionFigures/TipSlip.png' width='5'><BlueText>Taken from TAM 210 Lecture 27</BlueText></Image>
 
 <!-- From Lecture 27 -->
 </SubSection>
