--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -2,7 +2,7 @@
 const {title} = Astro.props;
 ---
 
-<div class="content-grid">
+<div class="content-grid mt-3">
     <div class="w-100">
         <h1 class="fw-bold text-center" set:html={title}></h1>
 
