--- a/src/pages/sta/forcesystems.astro
+++ b/src/pages/sta/forcesystems.astro
@@ -50,7 +50,7 @@ For a constant distributed load of magnitude c applied to a bar over a length l,
 
 the resultant force location is at <InlineEquation equation='l/2' />.
 
-<Image src='/Statics/ForceSystemsFigures/DistLoad.PNG' width='5 '> Example distributed load (top) and its equivalent force system (bottom).</Image>
+<Image src='/Statics/ForceSystemsFigures/DistLoad.PNG' width='5'> Example distributed load (top) and its equivalent force system (bottom).</Image>
 
 </SubSubSection>
 
@@ -62,7 +62,7 @@ For a triangular distributed load (a uniformly varying load), the magnitude of t
 
 The location of <InlineEquation equation='F_R' /> is 1/3 from the base of the triangle. 
 
-<Image src='/Statics/ForceSystemsFigures/TriangleLoad.PNG' width='5 '> Example triangular distributed load (top) and its equivalent force system (bottom).</Image>
+<Image src='/Statics/ForceSystemsFigures/TriangleLoad.PNG' width='5'> Example triangular distributed load (top) and its equivalent force system (bottom).</Image>
 
 </SubSubSection>
 
@@ -82,7 +82,7 @@ Now we can solve for the center of mass of the distributed load, <InlineEquation
 
 <DisplayEquation equation='\\bar{x} = \\dfrac{M_R}{F_R}\\' />
 
-<Image src='/Statics/ForceSystemsFigures/NonuniformLoad.PNG' width='5 '> Nonuniform load. Need to remake this in the same style as the other pictures.</Image>
+<Image src='/Statics/ForceSystemsFigures/NonuniformLoad.png' width='5'> Nonuniform load. Need to remake this in the same style as the other pictures.</Image>
 </SubSubSection>
 
 <!-- from lecture 11 and 12 -->
