--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -22,7 +22,7 @@ To determine how the internal shear force and bending moment change throughout t
 
 <SubSection title="Sign Conventions">
 
-<Image src='/Statics/IntForceFigures/SignConventions.jpg' width=''> Sign conventions for internal forces and moments</Image>
+<Image src='/Statics/IntForceFigures/SignConventions.jpg' width='5'> Sign conventions for internal forces and moments</Image>
 
 </SubSection>
 
@@ -31,9 +31,9 @@ To determine how the internal shear force and bending moment change throughout t
 
 Creating a shear force and bending moment diagram allows us to create a graphical representation of <InlineEquation equation='V' /> and <InlineEquation equation='M' /> as a function of the position along the beam, <InlineEquation equation='x' />. Therefore when creating internal loading diagrams we are trying to write equations for <InlineEquation equation='V(x)' /> and <InlineEquation equation='M(x)' />.
 
-<Image src='/Statics/IntForceFigures/DiagramProcedure.png' width=''><BlueText>Taken from TAM 210 Lecture 22</BlueText></Image>
+<Image src='/Statics/IntForceFigures/DiagramProcedure.png' width='5'><BlueText>Taken from TAM 210 Lecture 22</BlueText></Image>
 
-<Image src='/Statics/IntForceFigures/IntLoadRecap.png' width=''><BlueText>Taken from TAM 210 Lecture 23</BlueText></Image>
+<Image src='/Statics/IntForceFigures/IntLoadRecap.png' width='5'><BlueText>Taken from TAM 210 Lecture 23</BlueText></Image>
 
 </SubSection>
 
@@ -45,7 +45,7 @@ Creating a shear force and bending moment diagram allows us to create a graphica
 	<li>w(x)</li>
 </ol>
 
-<Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width=''><BlueText>See TAM 210 Lecture 25</BlueText></Image>
+<Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'><BlueText>See TAM 210 Lecture 25</BlueText></Image>
 
 </SubSection>
 
