Finished migrating  + small tweaks
Migrated 212 pages. Added them to sidebar and Dynamics homepage.

Made some small changes to CSS to add hover effects:
- On course homepage, hovering on a card makes it slightly bigger
- On course homepage in simplified view, hovering on a page makes the title bold to help identifying which one is currently selected
- Dev only, will remove for prod deployment: since some pages have \ref attributes, thought it'd be good if on hover, the name of the image appears, to be able to identify which file \ref refers to

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -17,15 +17,15 @@
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/course/sta">Statics (210/211)</a>
+                    <a class="nav-link active text-white py-1" href="/sta">Statics (210/211)</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/course/dyn">Dynamics (212)</a>
+                    <a class="nav-link active text-white py-1" href="/dyn">Dynamics (212)</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/course/sol">Solid Mechanics (251)</a>
+                    <a class="nav-link active text-white py-1" href="/sol">Solid Mechanics (251)</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
             </ul>
