--- a/src/pages/[course].astro
+++ b/src/pages/[course].astro
@@ -9,8 +9,8 @@ export function getStaticPaths() {
 
 const { course } = Astro.params;
 
-import Layout from '../../layouts/Layout.astro';
-import CardGrid from '../../components/CardGrid.svelte';
+import Layout from '../layouts/Layout.astro';
+import CardGrid from '../components/CardGrid.svelte';
 
 const course_tags = {
         'dyn': 'Dynamics',
